# hpmoc

./: .bumpversion.cfg  .git-blame-ignore-revs  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml  hpmoc-dev-win.yml  hpmoc-dev.yml  pyproject.toml
docs/source/: conf.py  index.rst
hpmoc/: __init__.py  abstract.py  arraysetops.py  atlas.py  fits.py  healpy.py  healpy_utils.py  partial.py  plot.py  plotters.py  points.py  psf.py  utils.py
hpmoc/atlas/: __init__.py
hpmoc/io/: __init__.py  abstract.py  astroquery.py  fits.py  gracedb.py  ligo.py
jup/: astroplot.ipynb  astroquery.ipynb  atlas.ipynb  diadic_precision.ipynb  from_wcs.ipynb  gridplot.ipynb  hilbert.ipynb  ligo_gracedb.ipynb  load.ipynb  uniq_minimize.ipynb  wcs.ipynb
tests/: __init__.py  test_healpy_shim.py  test_io.py  test_operations.py  test_utils.py
tests/data/: S191216ap.multiorder.fits  S200105ae.fits  S200105ae.hdf5  S200114f-3-Initial.hdf5  S200129m-3-Initial.hdf5  S230629ad.multiorder.fits
