[build-system]
requires = ["flit_core >=2,<4", "bump2version", "black"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "hpmoc"
author = "Stefan Trklja Countryman"
author-email = "stefan.countryman@gmail.com"
home-page = "https://bitbucket.org/stefancountryman/hpmoc"
requires = ["deprecated", "numpy", "matplotlib", "astropy", "astropy-healpix"]
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
jup = ["jupyter", "ipython"]
test = ["pytest", "pytest-cov", "h5py", "PyYAML"]
dev = [
    "flit",
    "nptyping =1.4.4",
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "astroquery",
    "ligo-gracedb",
]
astroquery = ["astroquery"]
gracedb = ["ligo-gracedb"]
healpy = ["healpy"]

[tool.black]
line-length = 79
target-version = ['py37']
